<resources>
    <string name="app_name">Androidohjelmointi</string>
    <string name="welcome_text">Hello world</string>
    <string name="new_welcome_text">Hello Lappeenranta</string>
    <string name="game_button">Play</string>
    <string name="button_taksi">Taxi</string>
    <string name="button_test">Button</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_location">Location</string>
    <string name="title_timer">Timer</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Address">Addres</string>
    <string name="buttonLocation">Show your location on map</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="title_activity_taxi">TaxiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>