<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Latitude">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textFieldLatitudeField"
            />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Longitude">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textFieldLongitudeField"            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Address">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textFieldLongitudeAddres"            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLocation" />

</LinearLayout>